--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,15 @@
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-pandas
-numpy
-scipy
-h5py
-matplotlib
-colorama
-tqdm
-terminaltables
+pandas~=1.4.4
+numpy~=1.22.4
+colorama~=0.4.4
+tqdm~=4.64.1
 
-SimpleITK
-torch
-scikit-image
-pydicom
-pymedphys
-DicomRTTool
+SimpleITK~=2.1.1.2
+torch~=2.0.1
+scikit-image~=0.19.3
+pydicom~=2.3.1
+pymedphys~=0.39.3
+DicomRTTool~=2.0.9
+monai~=1.3.0
+
+opencv-python~=4.8.0.76
+setuptools~=62.1.0
