--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,96 @@
-pandas~=1.4.4
-numpy~=1.22.4
-colorama~=0.4.4
-tqdm~=4.64.1
-
-SimpleITK~=2.1.1.2
-torch~=2.0.1
-scikit-image~=0.19.3
-pydicom~=2.3.1
-pymedphys~=0.39.3
-DicomRTTool~=2.0.9
-monai~=1.3.0
-
-opencv-python~=4.8.0.76
-setuptools~=62.1.0
+absl-py==2.0.0
+alabaster==0.7.13
+-e git+https://github.com/amithjkamath/astra.git
+awscli==1.29.44
+Babel==2.12.1
+botocore==1.31.44
+build==1.0.3
+cachetools==5.3.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+check-manifest==0.49
+click==8.1.7
+colorama==0.4.4
+coverage==7.3.1
+cycler==0.11.0
+DicomRTTool==2.0.9
+docutils==0.16
+et-xmlfile==1.1.0
+exceptiongroup==1.1.3
+filelock==3.12.3
+flake8==6.1.0
+fonttools==4.42.1
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+grpcio==1.59.3
+h5py==3.9.0
+idna==3.4
+imageio==2.31.3
+imagesize==1.4.1
+importlib-metadata==6.8.0
+iniconfig==2.0.0
+Jinja2==3.1.2
+jmespath==1.0.1
+kiwisolver==1.4.5
+Markdown==3.5.1
+MarkupSafe==2.1.3
+matplotlib==3.5.3
+mccabe==0.7.0
+monai==1.3.0
+mpmath==1.3.0
+networkx==3.1
+numpy==1.22.4
+oauthlib==3.2.2
+onnx==1.15.0
+opencv-python==4.8.0.76
+openpyxl==3.1.2
+packaging==23.1
+pandas==1.4.4
+Pillow==10.0.0
+PlotScrollNumpyArrays==0.0.1
+pluggy==1.3.0
+protobuf==4.23.4
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycodestyle==2.11.0
+pydicom==2.3.1
+pyflakes==3.1.0
+Pygments==2.16.1
+pymedphys==0.39.3
+pyparsing==3.1.1
+pyproject_hooks==1.0.0
+pytest==7.4.2
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+PyWavelets==1.4.1
+PyYAML==6.0.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.7.2
+s3transfer==0.6.2
+scikit-image==0.19.3
+scipy==1.11.2
+SimpleITK==2.1.1.2
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==7.2.5
+sphinxcontrib-applehelp==1.0.7
+sphinxcontrib-devhelp==1.0.5
+sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.6
+sphinxcontrib-serializinghtml==1.1.9
+sympy==1.12
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+terminaltables==3.1.10
+tifffile==2023.8.30
+tomli==2.0.1
+torch==2.0.1
+tqdm==4.64.1
+typing_extensions==4.7.1
+urllib3==1.26.16
+Werkzeug==3.0.1
+xlrd==2.0.1
+zipp==3.16.2
