--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==2.0.0
 alabaster==0.7.13
--e git+https://github.com/amithjkamath/astra.git
+appdirs==1.4.4
+-e git+https://github.com/amithjkamath/astra.git@d0bf8c175e26eda083eed32bba677390b2f1946b#egg=astra
 awscli==1.29.44
 Babel==2.12.1
 botocore==1.31.44
@@ -14,12 +15,15 @@ colorama==0.4.4
 coverage==7.3.1
 cycler==0.11.0
 DicomRTTool==2.0.9
+docker-pycreds==0.4.0
 docutils==0.16
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
 filelock==3.12.3
 flake8==6.1.0
 fonttools==4.42.1
+gitdb==4.0.11
+GitPython==3.1.40
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 grpcio==1.59.3
@@ -50,6 +54,7 @@ Pillow==10.0.0
 PlotScrollNumpyArrays==0.0.1
 pluggy==1.3.0
 protobuf==4.23.4
+psutil==5.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.11.0
@@ -71,8 +76,11 @@ rsa==4.7.2
 s3transfer==0.6.2
 scikit-image==0.19.3
 scipy==1.11.2
+sentry-sdk==1.38.0
+setproctitle==1.3.3
 SimpleITK==2.1.1.2
 six==1.16.0
+smmap==5.0.1
 snowballstemmer==2.2.0
 Sphinx==7.2.5
 sphinxcontrib-applehelp==1.0.7
@@ -91,6 +99,7 @@ torch==2.0.1
 tqdm==4.64.1
 typing_extensions==4.7.1
 urllib3==1.26.16
+wandb==0.16.0
 Werkzeug==3.0.1
 xlrd==2.0.1
 zipp==3.16.2
