--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 absl-py==2.0.0
 alabaster==0.7.13
 appdirs==1.4.4
--e git+https://github.com/amithjkamath/astra.git@d0bf8c175e26eda083eed32bba677390b2f1946b#egg=astra
+-e git+https://github.com/amithjkamath/astra.git@72604d45821e0aacfafc93d04cdd0b7af4aa6307#egg=astra
+asttokens==2.4.1
 awscli==1.29.44
 Babel==2.12.1
 botocore==1.31.44
@@ -12,13 +13,16 @@ charset-normalizer==3.2.0
 check-manifest==0.49
 click==8.1.7
 colorama==0.4.4
+comm==0.2.0
 coverage==7.3.1
 cycler==0.11.0
+decorator==5.1.1
 DicomRTTool==2.0.9
 docker-pycreds==0.4.0
 docutils==0.16
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
+executing==2.0.1
 filelock==3.12.3
 flake8==6.1.0
 fonttools==4.42.1
@@ -33,15 +37,22 @@ imageio==2.31.3
 imagesize==1.4.1
 importlib-metadata==6.8.0
 iniconfig==2.0.0
+ipython==8.18.1
+ipywidgets==8.1.1
+jedi==0.19.1
 Jinja2==3.1.2
 jmespath==1.0.1
+jupyterlab-widgets==3.0.9
+k3d==2.16.0
 kiwisolver==1.4.5
 Markdown==3.5.1
 MarkupSafe==2.1.3
 matplotlib==3.5.3
+matplotlib-inline==0.1.6
 mccabe==0.7.0
 monai==1.3.0
 mpmath==1.3.0
+msgpack==1.0.7
 networkx==3.1
 numpy==1.22.4
 oauthlib==3.2.2
@@ -50,11 +61,18 @@ opencv-python==4.8.0.76
 openpyxl==3.1.2
 packaging==23.1
 pandas==1.4.4
+parso==0.8.3
+pexpect==4.9.0
 Pillow==10.0.0
+platformdirs==4.0.0
 PlotScrollNumpyArrays==0.0.1
 pluggy==1.3.0
+pooch==1.8.0
+prompt-toolkit==3.0.41
 protobuf==4.23.4
 psutil==5.9.6
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.11.0
@@ -68,6 +86,7 @@ pytest==7.4.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
+pyvista==0.42.3
 PyWavelets==1.4.1
 PyYAML==6.0.1
 requests==2.31.0
@@ -76,6 +95,7 @@ rsa==4.7.2
 s3transfer==0.6.2
 scikit-image==0.19.3
 scipy==1.11.2
+scooby==0.9.2
 sentry-sdk==1.38.0
 setproctitle==1.3.3
 SimpleITK==2.1.1.2
@@ -89,6 +109,7 @@ sphinxcontrib-htmlhelp==2.0.4
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
+stack-data==0.6.3
 sympy==1.12
 tensorboard==2.15.1
 tensorboard-data-server==0.7.2
@@ -97,9 +118,14 @@ tifffile==2023.8.30
 tomli==2.0.1
 torch==2.0.1
 tqdm==4.64.1
+traitlets==5.14.0
+traittypes==0.2.1
 typing_extensions==4.7.1
 urllib3==1.26.16
+vtk==9.3.0
 wandb==0.16.0
+wcwidth==0.2.12
 Werkzeug==3.0.1
+widgetsnbextension==4.0.9
 xlrd==2.0.1
 zipp==3.16.2
