--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 absl-py==2.0.0
 alabaster==0.7.13
 appdirs==1.4.4
--e git+https://github.com/amithjkamath/astra.git@72604d45821e0aacfafc93d04cdd0b7af4aa6307#egg=astra
+-e git+https://github.com/amithjkamath/astra.git@dd245f6aed308ba425306917ee560985ed188f76#egg=astra
 asttokens==2.4.1
 awscli==1.29.44
 Babel==2.12.1
@@ -39,6 +39,13 @@ importlib-metadata==6.8.0
 iniconfig==2.0.0
 ipython==8.18.1
 ipywidgets==8.1.1
+itk==5.3.0
+itk-core==5.3.0
+itk-filtering==5.3.0
+itk-io==5.3.0
+itk-numerics==5.3.0
+itk-registration==5.3.0
+itk-segmentation==5.3.0
 jedi==0.19.1
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -82,6 +89,7 @@ Pygments==2.16.1
 pymedphys==0.39.3
 pyparsing==3.1.1
 pyproject_hooks==1.0.0
+pyradise==0.2.3
 pytest==7.4.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
