--- a/requirements.txt
+++ b/requirements.txt
@@ -1,139 +1,17 @@
-absl-py==2.0.0
-alabaster==0.7.13
-appdirs==1.4.4
--e git+https://github.com/amithjkamath/astra.git@dd245f6aed308ba425306917ee560985ed188f76#egg=astra
-asttokens==2.4.1
-awscli==1.29.44
-Babel==2.12.1
-botocore==1.31.44
-build==1.0.3
-cachetools==5.3.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
-check-manifest==0.49
-click==8.1.7
-colorama==0.4.4
-comm==0.2.0
-coverage==7.3.1
-cycler==0.11.0
-decorator==5.1.1
-DicomRTTool==2.0.9
-docker-pycreds==0.4.0
-docutils==0.16
-et-xmlfile==1.1.0
-exceptiongroup==1.1.3
-executing==2.0.1
-filelock==3.12.3
-flake8==6.1.0
-fonttools==4.42.1
-gitdb==4.0.11
-GitPython==3.1.40
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-grpcio==1.59.3
-h5py==3.9.0
-idna==3.4
-imageio==2.31.3
-imagesize==1.4.1
-importlib-metadata==6.8.0
-iniconfig==2.0.0
-ipython==8.18.1
-ipywidgets==8.1.1
-itk==5.3.0
-itk-core==5.3.0
-itk-filtering==5.3.0
-itk-io==5.3.0
-itk-numerics==5.3.0
-itk-registration==5.3.0
-itk-segmentation==5.3.0
-jedi==0.19.1
-Jinja2==3.1.2
-jmespath==1.0.1
-jupyterlab-widgets==3.0.9
-k3d==2.16.0
-kiwisolver==1.4.5
-Markdown==3.5.1
-MarkupSafe==2.1.3
-matplotlib==3.5.3
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-monai==1.3.0
-mpmath==1.3.0
-msgpack==1.0.7
-networkx==3.1
-numpy==1.22.4
-oauthlib==3.2.2
-onnx==1.15.0
-opencv-python==4.8.0.76
-openpyxl==3.1.2
-packaging==23.1
-pandas==1.4.4
-parso==0.8.3
-pexpect==4.9.0
-Pillow==10.0.0
-platformdirs==4.0.0
-PlotScrollNumpyArrays==0.0.1
-pluggy==1.3.0
-pooch==1.8.0
-prompt-toolkit==3.0.41
-protobuf==4.23.4
-psutil==5.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycodestyle==2.11.0
-pydicom==2.3.1
-pyflakes==3.1.0
-Pygments==2.16.1
-pymedphys==0.39.3
-pyparsing==3.1.1
-pyproject_hooks==1.0.0
-pyradise==0.2.3
-pytest==7.4.2
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2023.3.post1
-pyvista==0.42.3
-PyWavelets==1.4.1
-PyYAML==6.0.1
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.7.2
-s3transfer==0.6.2
-scikit-image==0.19.3
-scipy==1.11.2
-scooby==0.9.2
-sentry-sdk==1.38.0
-setproctitle==1.3.3
-SimpleITK==2.1.1.2
-six==1.16.0
-smmap==5.0.1
-snowballstemmer==2.2.0
-Sphinx==7.2.5
-sphinxcontrib-applehelp==1.0.7
-sphinxcontrib-devhelp==1.0.5
-sphinxcontrib-htmlhelp==2.0.4
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.6
-sphinxcontrib-serializinghtml==1.1.9
-stack-data==0.6.3
-sympy==1.12
-tensorboard==2.15.1
-tensorboard-data-server==0.7.2
-terminaltables==3.1.10
-tifffile==2023.8.30
-tomli==2.0.1
-torch==2.0.1
-tqdm==4.64.1
-traitlets==5.14.0
-traittypes==0.2.1
-typing_extensions==4.7.1
-urllib3==1.26.16
-vtk==9.3.0
-wandb==0.16.0
-wcwidth==0.2.12
-Werkzeug==3.0.1
-widgetsnbextension==4.0.9
-xlrd==2.0.1
-zipp==3.16.2
+monai~=1.3.0
+numpy~=1.23.5
+onnx~=1.15.0
+opencv-python~=4.8.0.76
+pandas~=1.4.4
+Pillow~=10.0.0
+pydicom~=2.3.1
+pymedphys~=0.40.0
+pyvista~=0.42.3
+scikit-image~=0.19.3
+scipy~=1.11.2
+SimpleITK~=2.4.1
+tensorboard~=2.15.1
+torch~=2.0.1
+tqdm~=4.64.1
+vtk~=9.3.0
+wandb~=0.16.0
